[gd_scene load_steps=15 format=2]

[ext_resource path="res://game-assets/game-sprites/hud-sprites/sonic-mania-hud/sprites/hud-text-sprites.png" type="Texture" id=1]
[ext_resource path="res://general-objects/hud.gd" type="Script" id=2]
[ext_resource path="res://general-objects/dpad/dpad-object.tscn" type="PackedScene" id=13]
[ext_resource path="res://game-assets/game-fonts/sonic-hud-font.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://game-assets/game-sprites/hud-sprites/controller-sprites/a-idle-button.png" type="Texture" id=15]
[ext_resource path="res://game-assets/game-sprites/hud-sprites/controller-sprites/a-button.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.345098, 0.439216, 0.564706, 1 )
font_data = ExtResource( 14 )

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D
tool

onready var parent = get_parent()
var lines : PoolVector2Array = []
export var initial_rolete : = 0.0 setget set_initial_rolete
export var position_point: float = 1
var rolete : = 0.0
export var editor_process: bool = false setget set_editor_process

func _ready():
	rolete = initial_rolete
	if Engine.editor_hint:
		set_process(editor_process)
		return

func triangle(x:float):
	var period : float = 10.0
	var phase : = 1.0
	var pos: float = fmod(x, period) / period;
	   
	if pos < .5 :
		return lerp(0.0, 1.0, pos * 2.0);
	else:
		return lerp(1.0, 0.0, (pos - .5) * 2.0);


func _process(delta):
	lines = []
	position.x = parent.rect_size.x * position_point
	var t : float = 0
	var max_val : float = 100
	rolete += delta * 30
	rolete= fmod(rolete, max_val)
	while t <= max_val:
		var float_point := abs(t / max_val)
		
		var to_append = Vector2(
				triangle((t + rolete)) * 10,
				float_point * parent.rect_size.y
			)
		lines.append(
			to_append
		)
		t += 1
		
	lines.append(Vector2(0, parent.rect_size.y))
	lines.append(Vector2.ZERO)
	update()
	

func _draw():
	var color : Color = parent.color if parent else Color.red
	draw_colored_polygon(lines, color)

func set_editor_process(val : bool) -> void:
	editor_process = val
	if !Engine.editor_hint: return
	set_process(editor_process)

func set_initial_rolete(val : float) -> void:
	initial_rolete = val
	if Engine.editor_hint:
		rolete = initial_rolete
"

[sub_resource type="DynamicFontData" id=3]
font_path = "res://game-assets/game-fonts/NiseSegaSonic.TTF"

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = SubResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleCard/NormalBg/Bg2:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleCard/NormalBg/Bg2:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.25 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleCard/NormalBg/Bg:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleCard/NormalBg/Bg:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TitleCard/Up:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TitleCard/Up:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TitleCard/Down:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TitleCard/Down:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TitleCard:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "delete"
length = 1.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TitleCard/NormalBg/Bg2:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleCard/NormalBg/Bg2:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -0.25 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleCard/NormalBg/Bg:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.05, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleCard/NormalBg/Bg:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.05, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TitleCard/Up:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -0.2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TitleCard/Up:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -0.2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TitleCard/Down:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.15, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TitleCard/Down:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.15, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.2 ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("TitleCard/NormalBg/Bg2/Triangle")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("TitleCard/NormalBg/Bg/Triangle2")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.05, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "fade_transition"
}, {
"args": [ "can_play" ],
"method": "emit_signal"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TitleCard:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "show"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TitleCard/NormalBg/Bg2:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.25, -0.25, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleCard/NormalBg/Bg2:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.25, -0.25, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TitleCard/NormalBg/Bg:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TitleCard/NormalBg/Bg:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TitleCard/Up:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.2, -0.2, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TitleCard/Up:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.2, -0.2, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TitleCard/Down:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.2, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TitleCard/Down:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.2, 0.2, 0.0 ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("TitleCard/NormalBg/Bg2/Triangle")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("TitleCard/NormalBg/Bg/Triangle2")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_process"
} ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("AnimationPlayer")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.75 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "delete", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TitleCard:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Transition" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Separate" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Separate"]
margin_right = 480.0
margin_bottom = 1.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="STRCounters" type="HBoxContainer" parent="Separate"]
margin_top = 5.0
margin_right = 480.0
margin_bottom = 46.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Separate/STRCounters"]
margin_right = 2.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="STR" type="VBoxContainer" parent="Separate/STRCounters"]
margin_left = 6.0
margin_right = 48.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScoreIndicator" type="Control" parent="Separate/STRCounters/STR"]
margin_right = 42.0
margin_bottom = 11.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="Separate/STRCounters/STR/ScoreIndicator"]
position = Vector2( 21, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 41, 14 )

[node name="TimerIndicator" type="Control" parent="Separate/STRCounters/STR"]
margin_top = 15.0
margin_right = 42.0
margin_bottom = 26.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="Sprite2" type="Sprite" parent="Separate/STRCounters/STR/TimerIndicator"]
position = Vector2( 17, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 14, 33, 14 )

[node name="RingIndicator" type="Control" parent="Separate/STRCounters/STR"]
margin_top = 30.0
margin_right = 42.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="Sprite3" type="Sprite" parent="Separate/STRCounters/STR/RingIndicator"]
position = Vector2( 21, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 28, 41, 14 )

[node name="Count" type="VBoxContainer" parent="Separate/STRCounters"]
margin_left = 52.0
margin_right = 94.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScoreCounter" type="Label" parent="Separate/STRCounters/Count"]
margin_right = 42.0
margin_bottom = 11.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeCounter" type="Label" parent="Separate/STRCounters/Count"]
margin_top = 15.0
margin_right = 42.0
margin_bottom = 26.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RingCounter" type="Label" parent="Separate/STRCounters/Count"]
margin_top = 30.0
margin_right = 42.0
margin_bottom = 41.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Separate/STRCounters"]
margin_left = 98.0
margin_right = 480.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 18.0

[node name="Control" type="Control" parent="Separate"]
margin_top = 50.0
margin_right = 480.0
margin_bottom = 125.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.79

[node name="AspectRatioContainer" type="MarginContainer" parent="Separate"]
margin_top = 129.0
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
size_flags_stretch_ratio = 7.11

[node name="TouchScreenController" type="HBoxContainer" parent="Separate/AspectRatioContainer"]
margin_right = 480.0
margin_bottom = 141.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 5
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DPAD" type="Control" parent="Separate/AspectRatioContainer/TouchScreenController"]
margin_right = 238.0
margin_bottom = 141.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d-pad" parent="Separate/AspectRatioContainer/TouchScreenController/DPAD" instance=ExtResource( 13 )]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 81, 71 )
scale = Vector2( 2, 2 )

[node name="ACTION" type="Control" parent="Separate/AspectRatioContainer/TouchScreenController"]
margin_left = 480.0
margin_right = 480.0
margin_bottom = 141.0
size_flags_horizontal = 10

[node name="jump_button" type="TouchScreenButton" parent="Separate/AspectRatioContainer/TouchScreenController/ACTION"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( -92, 65 )
normal = ExtResource( 16 )
pressed = ExtResource( 15 )
action = "ui_jump"
visibility_mode = 1

[node name="TitleCard" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Up" type="ColorRect" parent="TitleCard"]
anchor_top = -0.2
anchor_bottom = -0.2
margin_right = 480.0
margin_bottom = 22.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color( 0.0731, 0.412155, 0.43, 1 )

[node name="NormalBg" type="HBoxContainer" parent="TitleCard"]
margin_top = 21.0
margin_right = 480.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="ColorRect" parent="TitleCard/NormalBg"]
anchor_left = -0.25
anchor_right = -0.25
margin_right = 96.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
color = Color( 0.054902, 0.309804, 0.32549, 1 )

[node name="Triangle" type="Node2D" parent="TitleCard/NormalBg/Bg2"]
position = Vector2( 96, 0 )
script = SubResource( 2 )
editor_process = true

[node name="Bg" type="ColorRect" parent="TitleCard/NormalBg"]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = 95.0
margin_right = 480.0
margin_bottom = 227.0
size_flags_horizontal = 3
color = Color( 0.04, 0.51, 0.52, 0.25 )

[node name="Text" type="VBoxContainer" parent="TitleCard/NormalBg/Bg"]
anchor_left = 0.096
anchor_top = 0.373926
anchor_right = 1.00004
anchor_bottom = 0.651852
margin_left = 0.0400009
margin_top = 0.0399933
margin_right = -0.0150146
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZoneName" type="Label" parent="TitleCard/NormalBg/Bg/Text"]
margin_right = 348.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "Test Zone"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ActContainer" type="HBoxContainer" parent="TitleCard/NormalBg/Bg/Text"]
margin_top = 44.0
margin_right = 348.0
margin_bottom = 75.0

[node name="ActLabel" type="Label" parent="TitleCard/NormalBg/Bg/Text/ActContainer"]
margin_right = 73.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "Act"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ActNum" type="Label" parent="TitleCard/NormalBg/Bg/Text/ActContainer"]
margin_left = 77.0
margin_right = 92.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
text = "1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Triangle2" type="Node2D" parent="TitleCard/NormalBg/Bg"]
scale = Vector2( -1, 1 )
script = SubResource( 2 )
initial_rolete = 3.142
position_point = 0.0
editor_process = true

[node name="Down" type="ColorRect" parent="TitleCard"]
anchor_top = 0.2
anchor_bottom = 0.2
margin_top = 247.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
color = Color( 0.0731, 0.412155, 0.43, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 6 )
anims/delete = SubResource( 7 )
anims/show = SubResource( 8 )
